<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_lidar_fusion</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="taewon@todo.todo">taewon</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>numpy</exec_depend>
    <exec_depend>opencv2</exec_depend>
    <exec_depend>message_filters</exec_depend>
    <exec_depend>zed_node</exec_depend>
    <exec_depend>rpyutils</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
  </export>
</package>
